--- a/front/search/search.html
+++ b/front/search/search.html
@@ -1,3 +1,4 @@
+<nav class="navbar navbar-default navbar-fixed-top" ng-include src="'front/navigation/navigation.html'" ng-controller="NavigationController"></nav>
 <div class="container search-body">
     <h2 class="page-header">Welcome to FriendZone!</h2>
     <div class="row">
@@ -69,9 +70,9 @@
     </div>
     <div class="row search-results">
         <ul class="list-group">
-            <li class="list-group-item clearfix">
+            <li class="list-group-item clearfix" ng-repeat="user in users">
                 <div class="col-sm-12 col-md-3 col-lg-4">
-                    <h3><a href="/profile">John Doe</a></h3>
+                    <h3><a href="/profile">{{user.username}}</a></h3>
                     <div>
                         <img src="public/images/kyoto.jpg" class="avatar img-square img-thumbnail" alt="avatar">
                     </div>
@@ -115,6 +116,7 @@
         </div>
     </div>
 </div>
+
 <div id="invite-modal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
