finished routing through all pages.

--- a/front/search/search.html
+++ b/front/search/search.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top" ng-include src="'front/navigation/navigation.html'" ng-controller="NavigationController"></nav>
-<div class="container search-body">
+<div class="container body">
     <h2 class="page-header">Welcome to FriendZone!</h2>
     <div class="row">
         <!--profile corner-->
