--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -1,10 +1,270 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<nav class="navbar navbar-default navbar-fixed-top" ng-include src="'front/navigation/navigation.html'" ng-controller="NavigationController"></nav>
+<div class="container body">
+    <h2 class="page-header">Admin</h2>
+    <div class="panel panel-default">
+        <ul class="list-group">
+            <li class="list-group-item">Number of Users: 250</li>
+            <li class="list-group-item">Number of Events: 50</li>
+            <li class="list-group-item">Reported Users: 15</li>
+        </ul>
+    </div>
+    <div class="row">
+        <ul class="nav nav-pills">
+            <li class="active"><a href="#users" data-toggle="tab">All Users</a></li>
+            <li><a href="#events" data-toggle="tab">All Events</a></li>
+            <li><a href="#reported" data-toggle="tab">Reported Users</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane active" id="users">
+                <ul class="list-group">
+                    <li class="list-group-item clearfix">
+                        <div class="col-xs-12 col-md-6 profiles">
+                            <h3><a href="/profile">Dave</a></h3>
+                        </div>
+                        <div class="col-xs-12 col-md-6 profiles"><br>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#edit-user-modal">Edit User</button>
+                            <button class="btn btn-danger" data-toggle="modal" data-target="#confirm-modal">Delete User</button>
+                        </div>
+                    </li>
+                </ul>
+                <div class="row text-center">
+                    <div class="col-lg-12">
+                        <ul class="pagination">
+                            <li>
+                                <a href="#">&laquo;</a>
+                            </li>
+                            <li class="active">
+                                <a href="#">1</a>
+                            </li>
+                            <li>
+                                <a href="#">2</a>
+                            </li>
+                            <li>
+                                <a href="#">3</a>
+                            </li>
+                            <li>
+                                <a href="#">4</a>
+                            </li>
+                            <li>
+                                <a href="#">5</a>
+                            </li>
+                            <li>
+                                <a href="#">&raquo;</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane" id="events">
+                <ul class="list-group">
+                    <li class="list-group-item clearfix">
+                        <div class="col-xs-12 col-md-6 profiles">
+                            <h3><a href="/event">Dave's Birthday Party</a></h3>
+                        </div>
+                        <div class="col-xs-12 col-md-6 profiles"><br>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#edit-event-modal">Edit Event</button>
+                            <button class="btn btn-danger" data-toggle="modal" data-target="#confirm-modal">Delete Event</button>
+                        </div>
+                    </li>
+                </ul>
+                <div class="row text-center">
+                    <div class="col-lg-12">
+                        <ul class="pagination">
+                            <li>
+                                <a href="#">&laquo;</a>
+                            </li>
+                            <li class="active">
+                                <a href="#">1</a>
+                            </li>
+                            <li>
+                                <a href="#">2</a>
+                            </li>
+                            <li>
+                                <a href="#">3</a>
+                            </li>
+                            <li>
+                                <a href="#">4</a>
+                            </li>
+                            <li>
+                                <a href="#">5</a>
+                            </li>
+                            <li>
+                                <a href="#">&raquo;</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane" id="reported">
+                <ul class="list-group">
+                    <li class="list-group-item clearfix">
+                        <div class="col-xs-12 col-md-6 profiles">
+                            <h3><a href="/profile">Dave</a></h3>
+                        </div>
+                        <div class="col-xs-12 col-md-6 profiles"><br>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#report-modal">See Report</button>
+                            <button class="btn btn-danger" data-toggle="modal" data-target="#confirm-modal">Delete User</button>
+                        </div>
+                    </li>
+                </ul>
+                <div class="row text-center">
+                    <div class="col-lg-12">
+                        <ul class="pagination">
+                            <li>
+                                <a href="#">&laquo;</a>
+                            </li>
+                            <li class="active">
+                                <a href="#">1</a>
+                            </li>
+                            <li>
+                                <a href="#">2</a>
+                            </li>
+                            <li>
+                                <a href="#">3</a>
+                            </li>
+                            <li>
+                                <a href="#">4</a>
+                            </li>
+                            <li>
+                                <a href="#">5</a>
+                            </li>
+                            <li>
+                                <a href="#">&raquo;</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="confirm-modal" class="modal fade event-modal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <h4>Are you sure?</h4>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="edit-user-modal" role="dialog">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="gridSystemModalLabel">Edit profile</h4>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <!-- personal info -->
+                    <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
+                        <h3>Personal info</h3>
+                        <form class="form-horizontal" role="form">
+                            <div class="form-group">
+                                <label class="col-lg-3 control-label">First name:</label>
+                                <div class="col-lg-8">
+                                    <input class="form-control" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-lg-3 control-label">Last name:</label>
+                                <div class="col-lg-8">
+                                    <input class="form-control" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-lg-3 control-label">Email:</label>
+                                <div class="col-lg-8">
+                                    <input class="form-control" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Username:</label>
+                                <div class="col-md-8">
+                                    <input class="form-control" type="text">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Password:</label>
+                                <div class="col-md-8">
+                                    <input class="form-control" type="password">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-md-3 control-label">Confirm password:</label>
+                                <div class="col-md-8">
+                                    <input class="form-control" type="password">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
 
-</body>
-</html>
+                    <!-- profile picture -->
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <h3>Profile picture</h3>
+                        <div class="text-center">
+                            <img src="/images/kyoto.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
+                            <h6>Upload a photo</h6>
+                            <input type="file" class="text-center center-block well well-sm">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="edit-event-modal" class="modal fade event-modal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <div class="form-group">
+                    <div class="input-group">
+                        <span class="input-group-addon">Name:</span>
+                        <input type="text" class="form-control" placeholder="Awesome thing V12">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon">Time:</span>
+                        <input type="text" class="form-control" placeholder="June 24, 2014 12:00AM">
+                    </div>
+                    <div class="input-group">
+                        <span class="input-group-addon">Location:</span>
+                        <input type="text" class="form-control" placeholder="Empire State Building">
+                    </div>
+                    <br/>
+                    <label for="description">Description:</label>
+                    <textarea class="form-control" rows="5" id="description"></textarea>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Create</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="report-modal" class="modal fade event-modal" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Donec consequat sapien quam, eu dictum velit sagittis eu. Vestibulum a turpis neque. Curabitur condi
+                    mentum pulvinar nulla sed convallis. Donec in lorem a nisi sagittis pretium. Duis mollis orci gravid
+                    a mattis vehicula. Curabitur sollicitudin in odio non consequat. Donec ac nisl non ipsum mattis cond
+                    imentum ac quis purus. Nullam porta nisi sit amet fermentum ultricies. Vestibulum quis libero ut tel
+                    lus porta porta nec quis neque. Phasellus maximus, magna quis porta hendrerit, leo nibh congue neque
+                    , ac auctor eros tortor eu risus.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Dismiss</button>
+            </div>
+        </div>
+    </div>
+</div>
