--- a/front/navigation/navigation.html
+++ b/front/navigation/navigation.html
@@ -7,12 +7,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/search">FriendZone</a>
+        <a class="navbar-brand" ui-sref="search">FriendZone</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="/search">Search</a></li>
-            <li><a href="/admin">Admin</a></li>
+            <li class="active"><a ui-sref="search">Search</a></li>
+            <li><a ui-sref="admin">Admin</a></li>
         </ul>
         <div class="nav navbar-nav navbar-right">
             <form class="navbar-form" role="search">
@@ -28,12 +28,12 @@
         <div class="nav navbar-nav navbar-right">
             <ul class="nav navbar-nav pull-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <a ui-sref="profile" class="dropdown-toggle" data-toggle="dropdown">
                         <img class="profile-image img-circle" src="public/images/kyoto-18x18.jpg"> Dave <b
                             class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/profile">Account</a></li>
+                        <li><a ui-sref="profile">Account</a></li>
                         <li class="divider"></li>
                         <li><a href="/">Logout</a></li>
                     </ul>
