--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <script src="front/landing/landing-controller.js"></script>
     <script src="front/search/search-controller.js"></script>
     <script src="front/profile/profile-controller.js"></script>
+    <script src="front/admin/admin-controller.js"></script>
 </body>
 </html>
