--- a/front/navigation/navigation.html
+++ b/front/navigation/navigation.html
@@ -11,8 +11,8 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a ui-sref="search">Search</a></li>
-            <li><a ui-sref="admin">Admin</a></li>
+            <li ng-class="{active: setActive('/search')}"><a ui-sref="search">Search</a></li>
+            <li ng-class="{active: setActive('/admin')}"><a ui-sref="admin">Admin</a></li>
         </ul>
         <div class="nav navbar-nav navbar-right">
             <form class="navbar-form" role="search">
