fixed login thru front end

--- a/front/landing/landing.html
+++ b/front/landing/landing.html
@@ -3,8 +3,8 @@
         <h1 class="landing-title">FriendZone</h1>
         <button class="btn btn-primary" id="find-btn" ng-click="onClickFind()">Find Friends</button>
         <div class="login-form" id="login-form">
-            <input type="text" class="form-control" placeholder="Email" ng-model="user.email"><br/>
-            <input type="password" class="form-control" placeholder="Password" ng-model="user.password"><br/>
+            <input type="text" class="form-control" name="username" placeholder="Username" ng-model="user.username"><br/>
+            <input type="password" class="form-control" name="password" placeholder="Password" ng-model="user.password"><br/>
             <button class="btn btn-primary" ng-click="login()">Login</button><br/>
             <div class="btn-group social-login" role="group">
                 <button type="button" class="btn btn-default"><i class="fa fa-google"></i></button>
