--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -41,6 +41,12 @@
             </div>
         </li>
     </ul>
+
+    <uib-tabset active="active">
+        <uib-tab index="1" heading="Static title 1 ">Static content 1 </uib-tab>
+        <uib-tab index="2" heading="Static title 2 ">Static content 2 </uib-tab>
+        <uib-tab index="3" heading="Static title 3 ">Static content 3 </uib-tab>
+    </uib-tabset>
 </div>
 
 <!-- -------------------------------------MODALS------------------------------ -->
