--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="node_modules/angular/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.2.5/ui-bootstrap-tpls.min.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="node_modules/angular-flash-alert/dist/angular-flash.min.js"></script>
 
     <script src="front/app.js"></script>
     <script src="front/navigation/navigation-controller.js"></script>
