--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -3,180 +3,110 @@
     <h2 class="page-header">Admin</h2>
     <div class="panel panel-default">
         <ul class="list-group">
-            <li class="list-group-item">Number of Users: {{user_count}}</li>
-            <li class="list-group-item">Number of Events: {{event_count}}</li>
-            <li class="list-group-item">Reported Users: {{reported_count}}</li>
+            <li class="list-group-item">Number of Users: {{users.length}}</li>
+            <li class="list-group-item">Number of Events: {{events.length}}</li>
+            <li class="list-group-item">Reported Users: {{reports.length}}</li>
         </ul>
     </div>
-    <ul class="list-group">
-        <li class="list-group-item clearfix" ng-repeat="user in users">
-            <div class="col-xs-12 col-md-6 profiles">
-                <h3><a href="/profile">{{user.username}}</a></h3>
-            </div>
-            <div class="col-xs-12 col-md-6 profiles"><br>
-                <button class="btn btn-primary">Edit User</button>
-                <button class="btn btn-danger" ng-click="deleteUser(user);">Delete User</button>
-            </div>
-        </li>
-    </ul>
-    <ul class="list-group">
-        <li class="list-group-item clearfix" ng-repeat="event in events">
-            <div class="col-xs-12 col-md-6 profiles">
-                <h3><a href="/profile">{{user.username}}</a></h3>
-            </div>
-            <div class="col-xs-12 col-md-6 profiles"><br>
-                <button class="btn btn-primary" data-toggle="modal" data-target="#edit-user-modal">Edit User</button>
-                <button class="btn btn-danger" data-toggle="modal" data-target="#confirm-modal">Delete User</button>
-            </div>
-        </li>
-    </ul>
-    <ul class="list-group">
-        <li class="list-group-item clearfix" ng-repeat="reported in reporteds">
-            <div class="col-xs-12 col-md-6 profiles">
-                <h3><a href="/profile">{{reported.username}}</a></h3>
-            </div>
-            <div class="col-xs-12 col-md-6 profiles"><br>
-                <button class="btn btn-primary" data-toggle="modal" data-target="#edit-user-modal">Edit User</button>
-                <button class="btn btn-danger" ng-click="deleteUser(user)">Delete User</button>
-            </div>
-        </li>
-    </ul>
 
     <uib-tabset active="active">
-        <uib-tab index="1" heading="Static title 1 ">Static content 1 </uib-tab>
-        <uib-tab index="2" heading="Static title 2 ">Static content 2 </uib-tab>
-        <uib-tab index="3" heading="Static title 3 ">Static content 3 </uib-tab>
+        <uib-tab index="1" heading="All Users ">
+            <ul class="list-group">
+                <li class="list-group-item clearfix" ng-repeat="user in filteredUsers">
+                    <div class="col-xs-12 col-md-6 profiles">
+                        <h3><a href="/profile">{{user.username}}</a></h3>
+                        <span class="label label-danger" ng-show="user.reported">Reported</span>
+                    </div>
+                    <div class="col-xs-12 col-md-6 profiles"><br>
+                        <button class="btn btn-primary" ng-click="openEditUser(user);">Edit User</button>
+                        <button class="btn btn-danger" ng-click="openConfirm('user', user);">Delete User</button>
+                    </div>
+                </li>
+            </ul>
+            <uib-pagination total-items="users.length" ng-model="currentUserPage" ng-change="userPageChanged(currentUserPage)"></uib-pagination>
+        </uib-tab>
+        <uib-tab index="2" heading="All Events ">
+            <ul class="list-group">
+                <li class="list-group-item clearfix" ng-repeat="event in filteredEvents">
+                    <div class="col-xs-12 col-md-6 profiles">
+                        <h3><a href="/event">{{event.name}}</a></h3>
+                    </div>
+                    <div class="col-xs-12 col-md-6 profiles"><br>
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#edit-user-modal">Edit User</button>
+                        <button class="btn btn-danger" data-toggle="modal" data-target="#confirm-modal">Delete User</button>
+                    </div>
+                </li>
+            </ul>
+            <uib-pagination total-items="events.length" ng-model="currentEventPage" ng-change="eventPageChanged(currentEventPage)"></uib-pagination>
+        </uib-tab>
+        <uib-tab index="3" heading="Reported Users ">
+            <ul class="list-group">
+                <li class="list-group-item clearfix" ng-repeat="reported in filteredReports">
+                    <div class="col-xs-12 col-md-6 profiles">
+                        <h3><a href="/profile">{{reported.username}}</a></h3>
+                    </div>
+                    <div class="col-xs-12 col-md-6 profiles"><br>
+                        <button class="btn btn-primary" ng-click="openReviewReport(reported);">Review Report</button>
+                        <button class="btn btn-danger" ng-click="openConfirm('user', reported);">Delete User</button>
+                    </div>
+                </li>
+            </ul>
+            <uib-pagination total-items="reports.length" ng-model="currentReportedPage" ng-change="reportPageChanged(currentReportedPage)"></uib-pagination>
+        </uib-tab>
     </uib-tabset>
 </div>
 
 <!-- -------------------------------------MODALS------------------------------ -->
-<div id="confirm-modal" class="modal fade event-modal" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <h4>Are you sure?</h4>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Confirm</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
+<script type="text/ng-template" id="confirm-modal">
+    <div class="modal-header">
+        <h3 class="modal-title">Confirm Delete</h3>
     </div>
-</div>
-<div class="modal fade" id="edit-user-modal" role="dialog">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="gridSystemModalLabel">Edit profile</h4>
-            </div>
-            <div class="modal-body">
-                <div class="row">
-                    <!-- personal info -->
-                    <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
-                        <h3>Personal info</h3>
-                        <form class="form-horizontal" role="form">
-                            <div class="form-group">
-                                <label class="col-lg-3 control-label">First name:</label>
-                                <div class="col-lg-8">
-                                    <input class="form-control" type="text">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-lg-3 control-label">Last name:</label>
-                                <div class="col-lg-8">
-                                    <input class="form-control" type="text">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-lg-3 control-label">Email:</label>
-                                <div class="col-lg-8">
-                                    <input class="form-control" type="text">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-3 control-label">Username:</label>
-                                <div class="col-md-8">
-                                    <input class="form-control" type="text">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-3 control-label">Password:</label>
-                                <div class="col-md-8">
-                                    <input class="form-control" type="password">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-3 control-label">Confirm password:</label>
-                                <div class="col-md-8">
-                                    <input class="form-control" type="password">
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-
-                    <!-- profile picture -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <h3>Profile picture</h3>
-                        <div class="text-center">
-                            <img src="/images/kyoto.jpg" class="avatar img-circle img-thumbnail" alt="avatar">
-                            <h6>Upload a photo</h6>
-                            <input type="file" class="text-center center-block well well-sm">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
+    <div class="modal-body">
+        <h4>Are you sure you want to delete this item?</h4>
     </div>
-</div>
-<div id="edit-event-modal" class="modal fade event-modal" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <div class="form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon">Name:</span>
-                        <input type="text" class="form-control" placeholder="Awesome thing V12">
-                    </div>
-                    <div class="input-group">
-                        <span class="input-group-addon">Time:</span>
-                        <input type="text" class="form-control" placeholder="June 24, 2014 12:00AM">
-                    </div>
-                    <div class="input-group">
-                        <span class="input-group-addon">Location:</span>
-                        <input type="text" class="form-control" placeholder="Empire State Building">
-                    </div>
-                    <br/>
-                    <label for="description">Description:</label>
-                    <textarea class="form-control" rows="5" id="description"></textarea>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Create</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="confirm();">Confirm</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
     </div>
-</div>
-<div id="report-modal" class="modal fade event-modal" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <p>Donec consequat sapien quam, eu dictum velit sagittis eu. Vestibulum a turpis neque. Curabitur condi
-                    mentum pulvinar nulla sed convallis. Donec in lorem a nisi sagittis pretium. Duis mollis orci gravid
-                    a mattis vehicula. Curabitur sollicitudin in odio non consequat. Donec ac nisl non ipsum mattis cond
-                    imentum ac quis purus. Nullam porta nisi sit amet fermentum ultricies. Vestibulum quis libero ut tel
-                    lus porta porta nec quis neque. Phasellus maximus, magna quis porta hendrerit, leo nibh congue neque
-                    , ac auctor eros tortor eu risus.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Dismiss</button>
-            </div>
-        </div>
+</script>
+<script type="text/ng-template" id="edit-user-modal">
+    <div class="modal-header">
+        <h3 class="modal-title">Edit User</h3>
     </div>
-</div>
+    <div class="modal-body">
+        <label for="username">Username: </label>
+        <input type="text" class="form-control" ng-model="user.username" id="username"><br/>
+        <label for="username">Set New Password: </label>
+        <input type="password" class="form-control" ng-model="newPassword" id="password"><br/>
+        <label for="username">Email: </label>
+        <input type="email" class="form-control" ng-model="user.email" id="email"><br/>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="confirm();">Confirm</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
+    </div>
+</script>
+<script type="text/ng-template" id="edit-event-modal">
+    <div class="modal-header">
+        <h3 class="modal-title">Confirm Delete</h3>
+    </div>
+    <div class="modal-body">
+        <h4>Are you sure you want to delete this item?</h4>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="confirm();">Confirm</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
+    </div>
+</script>
+<script type="text/ng-template" id="review-report-modal">
+    <div class="modal-header">
+        <h3 class="modal-title">Review Report</h3>
+    </div>
+    <div class="modal-body">
+        <p>{{reportText}}</p>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="clear();">Clear</button>
+        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
+    </div>
+</script>
