--- a/front/search/search.html
+++ b/front/search/search.html
@@ -4,12 +4,12 @@
     <div class="row">
         <!--profile corner-->
         <div class="col-sm-12 col-md-4 search-profile">
-            <h3>Welcome Back, User!</h3>
+            <h3>Welcome Back, {{current.username}}!</h3>
             <div class="text-center">
                 <img src="public/images/kyoto.jpg" class="avatar img-square img-thumbnail" alt="avatar">
             </div>
             <hr>
-            <button class="btn btn-success" data-toggle="modal" data-target="#event-modal">Create New Event</button>
+            <button class="btn btn-success" ng-click="openNewEvent();">Create New Event</button>
         </div>
         <!-- Search controls -->
         <div class="col-sm-12 col-md-8">
@@ -103,39 +103,24 @@
         <h3 class="modal-title">New Event</h3>
     </div>
     <div class="modal-body">
-        <p>List goes here</p>
+        <label for="name">Event Name: </label>
+        <input type="text" class="form-control" ng-model="event.name" id="name"><br/>
+        <label for="date">Date: </label>
+        <p class="input-group" id="date">
+            <input type="text" class="form-control" uib-datepicker-popup="{{dateFormat}}" ng-model="event.date"
+                   is-open="datePopup.opened" datepicker-options="dateOptions" ng-required="true"
+                   close-text="Close" alt-input-formats="altInputFormats" />
+            <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="openDatePopup()">
+                    <i class="glyphicon glyphicon-calendar"></i>
+                </button>
+            </span>
+        </p>
+        <label for="description">Description: </label>
+        <textarea class="form-control" rows="5" id="description" ng-model="event.description"></textarea>
     </div>
     <div class="modal-footer">
         <button class="btn btn-warning" type="button" ng-click="create();">Create</button>
         <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
     </div>
 </script>
-<div id="event-modal" class="modal fade event-modal" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-body">
-                <div class="form-group search-form-group">
-                    <div class="input-group">
-                        <span class="input-group-addon">Name:</span>
-                        <input type="text" class="form-control" placeholder="Awesome thing V12">
-                    </div>
-                    <div class="input-group">
-                        <span class="input-group-addon">Time:</span>
-                        <input type="text" class="form-control" placeholder="June 24, 2014 12:00AM">
-                    </div>
-                    <div class="input-group">
-                        <span class="input-group-addon">Location:</span>
-                        <input type="text" class="form-control" placeholder="Empire State Building">
-                    </div>
-                    <br/>
-                    <label for="description">Description:</label>
-                    <textarea class="form-control" rows="5" id="description"></textarea>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Create</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            </div>
-        </div>
-    </div>
-</div>
