--- a/front/navigation/navigation.html
+++ b/front/navigation/navigation.html
@@ -29,8 +29,7 @@
             <ul class="nav navbar-nav pull-right">
                 <li class="dropdown">
                     <a ui-sref="profile" class="dropdown-toggle" data-toggle="dropdown">
-                        <img class="profile-image img-circle" src="public/images/kyoto-18x18.jpg"> Dave <b
-                            class="caret"></b>
+                        <img class="profile-image img-circle" src="public/images/kyoto-18x18.jpg"> {{current.username}}<b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a ui-sref="profile">Account</a></li>
