event page linked, modals moved

--- a/front/profile/profile.html
+++ b/front/profile/profile.html
@@ -54,7 +54,7 @@
                 <uib-tab index="1" heading="Upcoming Events">
                     <ul class="list-group">
                         <li class="list-group-item clearfix" ng-repeat="event in filteredUpcomingEvents">
-                            <a>{{event.name}}</a>
+                            <a ng-click="gotoEvent(event);">{{event.name}}</a>
                         </li>
                     </ul>
                     <uib-pagination total-items="upcomingEvents.length" ng-model="currentUpcomingPage" ng-change="upcomingPageChanged(currentUpcomingPage)"></uib-pagination>
@@ -71,6 +71,7 @@
         </div>
     </div>
 </div>
+
 <script type="text/ng-template" id="report-modal">
     <div class="modal-header">
         <h3 class="modal-title">Report User</h3>
@@ -81,25 +82,6 @@
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="report();">Report</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
-    </div>
-</script>
-<script type="text/ng-template" id="edit-profile-modal">
-    <div class="modal-header">
-        <h3 class="modal-title">Edit Profile</h3>
-    </div>
-    <div class="modal-body">
-        <label for="username">Username: </label>
-        <input type="text" class="form-control" ng-model="user.username" id="username"><br/>
-        <label for="email">Email: </label>
-        <input type="email" class="form-control" ng-model="user.email" id="email"><br/>
-        <label for="location">Location: </label>
-        <input type="text" class="form-control" ng-model="user.location" id="location"><br/>
-        <label for="description">Description: </label>
-        <textarea class="form-control" rows="5" ng-model="user.description" id="description"></textarea>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="confirm();">Confirm</button>
         <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
     </div>
 </script>
