--- a/front/admin/admin.html
+++ b/front/admin/admin.html
@@ -14,7 +14,7 @@
             <ul class="list-group">
                 <li class="list-group-item clearfix" ng-repeat="user in filteredUsers">
                     <div class="col-xs-12 col-md-6 profiles">
-                        <h3><a href="/profile">{{user.username}}</a></h3>
+                        <h3><a ng-click="gotoUser(user)">{{user.username}}</a></h3>
                         <span class="label label-danger" ng-show="user.reported">Reported</span>
                     </div>
                     <div class="col-xs-12 col-md-6 profiles"><br>
@@ -29,11 +29,11 @@
             <ul class="list-group">
                 <li class="list-group-item clearfix" ng-repeat="event in filteredEvents">
                     <div class="col-xs-12 col-md-6 profiles">
-                        <h3><a href="/event">{{event.name}}</a></h3>
+                        <h3><a ng-click="gotoEvent(event)">{{event.name}}</a></h3>
                     </div>
                     <div class="col-xs-12 col-md-6 profiles"><br>
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#edit-user-modal">Edit User</button>
-                        <button class="btn btn-danger" data-toggle="modal" data-target="#confirm-modal">Delete User</button>
+                        <button class="btn btn-primary" ng-click="openEditEvent(event)">Edit Event</button>
+                        <button class="btn btn-danger" ng-click="openConfirm('event', event)">Delete Event</button>
                     </div>
                 </li>
             </ul>
@@ -43,7 +43,7 @@
             <ul class="list-group">
                 <li class="list-group-item clearfix" ng-repeat="reported in filteredReports">
                     <div class="col-xs-12 col-md-6 profiles">
-                        <h3><a href="/profile">{{reported.username}}</a></h3>
+                        <h3><a ng-click="gotoUser(user)">{{reported.username}}</a></h3>
                     </div>
                     <div class="col-xs-12 col-md-6 profiles"><br>
                         <button class="btn btn-primary" ng-click="openReviewReport(reported);">Review Report</button>
@@ -57,33 +57,13 @@
 </div>
 
 <!-- -------------------------------------MODALS------------------------------ -->
-<script type="text/ng-template" id="confirm-modal">
-    <div class="modal-header">
-        <h3 class="modal-title">Confirm Delete</h3>
-    </div>
-    <div class="modal-body">
-        <h4>Are you sure you want to delete this item?</h4>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="confirm();">Confirm</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
-    </div>
-</script>
 <script type="text/ng-template" id="edit-user-modal">
-    <div class="modal-header">
-        <h3 class="modal-title">Edit User</h3>
-    </div>
-    <div class="modal-body">
-        <label for="username">Username: </label>
-        <input type="text" class="form-control" ng-model="user.username" id="username"><br/>
-        <input type="email" class="form-control" ng-model="user.email" id="email"><br/>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="confirm();">Confirm</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
-    </div>
+    <div ng-include src="'front/profile/user-modal.html'"/>
 </script>
 <script type="text/ng-template" id="edit-event-modal">
+    <div ng-include src="'front/event/event-modal.html'"/>
+</script>
+<script type="text/ng-template" id="confirm-modal">
     <div class="modal-header">
         <h3 class="modal-title">Confirm Delete</h3>
     </div>
