--- a/front/search/search.html
+++ b/front/search/search.html
@@ -72,7 +72,7 @@
         <ul class="list-group">
             <li class="list-group-item clearfix" ng-repeat="user in filteredUsers">
                 <div class="col-sm-12 col-md-3 col-lg-4">
-                    <h3><a href="/profile">{{user.username}}</a></h3>
+                    <h3><a ng-click="gotoUser(user);">{{user.username}}</a></h3>
                     <div>
                         <img src="public/images/kyoto.jpg" class="avatar img-square img-thumbnail" alt="avatar">
                     </div>
@@ -99,28 +99,5 @@
     </div>
 </script>
 <script type="text/ng-template" id="new-event-modal">
-    <div class="modal-header">
-        <h3 class="modal-title">New Event</h3>
-    </div>
-    <div class="modal-body">
-        <label for="name">Event Name: </label>
-        <input type="text" class="form-control" ng-model="event.name" id="name"><br/>
-        <label for="date">Date: </label>
-        <p class="input-group" id="date">
-            <input type="text" class="form-control" uib-datepicker-popup="{{dateFormat}}" ng-model="event.date"
-                   is-open="datePopup.opened" datepicker-options="dateOptions" ng-required="true"
-                   close-text="Close" alt-input-formats="altInputFormats" />
-            <span class="input-group-btn">
-                <button type="button" class="btn btn-default" ng-click="openDatePopup()">
-                    <i class="glyphicon glyphicon-calendar"></i>
-                </button>
-            </span>
-        </p>
-        <label for="description">Description: </label>
-        <textarea class="form-control" rows="5" id="description" ng-model="event.description"></textarea>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-warning" type="button" ng-click="create();">Create</button>
-        <button class="btn btn-warning" type="button" ng-click="cancel();">Cancel</button>
-    </div>
+    <div ng-include src="'front/event/event-modal.html'"/>
 </script>
