--- a/front/event/event-modal.html
+++ b/front/event/event-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3 class="modal-title">{{title}}</h3>
+    <h3 class="modal-title">{{modal.title}}</h3>
 </div>
 <div class="modal-body">
     <label for="name">Name: </label>
@@ -10,7 +10,7 @@
     <input type="text" class="form-control" ng-model="modal.event.location" id="location"><br/>
     <label for="date">Date: </label>
     <p class="input-group" id="date">
-        <input type="text" class="form-control" uib-datepicker-popup="{{dateFormat}}" ng-model="modal.event.date"
+        <input type="text" class="form-control" uib-datepicker-popup="{{dateFormat}}" ng-model="modal.date"
                is-open="datePopup.opened" datepicker-options="dateOptions"
                close-text="Close" alt-input-formats="altInputFormats" readonly="readonly"/>
             <span class="input-group-btn">
