--- a/front/navigation/navigation.html
+++ b/front/navigation/navigation.html
@@ -26,18 +26,17 @@
             </form>
         </div>
         <div class="nav navbar-nav navbar-right">
-            <ul class="nav navbar-nav pull-right">
-                <li class="dropdown">
-                    <a ui-sref="profile" class="dropdown-toggle" data-toggle="dropdown">
-                        <img class="profile-image img-circle" src="public/images/kyoto-18x18.jpg"> {{current.username}}<b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a ui-sref="profile">Account</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/">Logout</a></li>
-                    </ul>
-                </li>
-            </ul>
+            <!-- Simple dropdown -->
+            <span uib-dropdown>
+                <a class="dropdown-toggle nav-profile" data-toggle="dropdown" uib-dropdown-toggle>
+                    <img class="profile-image img-circle" src="public/images/kyoto-18x18.jpg"> {{current.username}}<b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu" uib-dropdown-menu>
+                  <li><a ui-sref="profile">Account</a></li>
+                  <li class="divider"></li>
+                  <li><a href="/">Logout</a></li>
+                </ul>
+            </span>
         </div>
     </div>
 </div>
